--- a/preparation/all_proteins.ipynb
+++ b/preparation/all_proteins.ipynb
@@ -42,7 +42,8 @@
    "source": [
     "from Bio import SeqIO\n",
     "from os import path, remove\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -125,11 +126,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Arabidopis ids"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_arabidopsisis_file_path = path.join(base_path, \"data/Araport11_genes_all.txt\")\n",
+    "all_arabidopsisis = pd.read_csv(all_arabidopsisis_file_path, header = None)\n",
+    "all_arabidopsisis = all_arabidopsisis.rename(columns = {0: \"accession\"})\n",
+    "all_arabidopsisis[\"accession_clean\"] = all_arabidopsisis.accession.apply(lambda x: x.split(\".\")[0])\n",
+    "all_arabidopsisis = all_arabidopsisis.drop(\"accession\", axis = 1)\n",
+    "all_arabidopsisis = all_arabidopsisis.drop_duplicates()\n",
+    "all_arabidopsisis.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_arabidopsisis.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arabidopsis_ids_file_path = path.join(base_path, \"data/all_ids.txt\")\n",
+    "all_arabidopsisis.to_csv(arabidopsis_ids_file_path, header=False, index=False)"
+   ]
   },
   {
    "cell_type": "code",
